--- a/src/scss/tpl/_datepicker.scss
+++ b/src/scss/tpl/_datepicker.scss
@@ -81,7 +81,7 @@
 
 .datepicker-cell {
   @include h3;
-  height: 32px;
+  height: 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
