--- a/src/scss/base/_mixes.scss
+++ b/src/scss/base/_mixes.scss
@@ -62,3 +62,14 @@
   @include wh(100%);
   object-fit: cover;
 }
+
+.tab-pane {
+  opacity: 0;
+  height: 0;
+  overflow: hidden;
+
+  &.active {
+    opacity: 1;
+    height: 100%;
+  }
+}
