--- a/src/pug/personal-user.pug
+++ b/src/pug/personal-user.pug
@@ -244,7 +244,7 @@ block personal
             input.form__field(type="text" value="+7 (989) 726-18-85")
             .form__label.form__label_title Телефон
           .form__item.active.mb-4
-            input.form__field(type="text" value="glumglam@gmail.com")
+            input.form__field.input-email(type="text" value="glumglam@gmail.com")
             .form__label.form__label_title e-mail
         .col-md-5.offset-md-2
           .form__item.active.mb-4
