--- a/src/pug/position.pug
+++ b/src/pug/position.pug
@@ -261,7 +261,7 @@ block wrapper
           .h5.mb-4 Оставьте свой номер телефона и мы сообщим, когда данный товар  появится в нашем магазине. Так же вы может получать уведомления через мессенджеры.
           .form.mb-4
             .form__item.mb-4
-              input.form__field(type="text" value="")
+              input.form__field.input-phone(type="text" value="")
               .form__label.form__label_title Номер телефона *
           .contacts
             a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-3(href="#")
