--- a/src/pug/contacts.pug
+++ b/src/pug/contacts.pug
@@ -117,7 +117,7 @@ block wrapper
               input.form__field(type="text" value="")
               label.form__label.form__label_title +7 (___) ___-__-__*
             .form__item.mb-4
-              input.form__field(type="text" value="")
+              input.form__field.input-email(type="text" value="")
               label.form__label.form__label_title e-mail*
           .col-xl-4.col-md-5.offset-md-2
             .form__item.mb-4
