--- a/src/pug/base.pug
+++ b/src/pug/base.pug
@@ -180,6 +180,7 @@ html(lang="ru")
     script(src="https://refreshless.com/nouislider/documentation/assets/wNumb.js")
     script(src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js")
     script(src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/js/ion.rangeSlider.min.js")
 
 //-
     + pug/tile - товары и баннеры в плитке на стр. результатов results-tires.html http://dl3.joxi.net/drive/2021/11/04/0050/2358/3311926/26/d2900e3683.jpg
